deployment/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30999
  selector:
    app: minio
  type: NodePort
