deployment/minio/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: minio-web-allow-external
spec:
  selector:
    matchLabels:
      app: minio
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - minio          
  ingress:
    - {}
  policyTypes:
    - Ingress
